fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -47,9 +47,7 @@ h1 {
     padding-left: 20px;
 }
 
-.nav-bars {
-    height: 90px;
-}
+
 
 .nav {
     list-style: none;
@@ -204,7 +202,7 @@ h1 {
 }
 
 .btn-expand {
-    height: 50px;
+    height: 60px;
     width: 57px;
     float: right;
     padding-top: 20px; 
@@ -374,5 +372,7 @@ h1 {
 }   
 
 @media only screen and (max-width: 30em) {
-    
+    .btn-expand {
+        padding-top: none; 
+    }
 }
